--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-structopt = "0.3"
-rusqlite = "0.32"
+bincode = "1.3"
+db = "0.1"
 dirs = "5.0"
+env_logger = "0.11"
+log = "0.4"
+rocksdb = "0.22"
+serde = "1.0"
+serde_derive = "1.0"
+structopt = "0.3"
+toml = "0.8"
+
