--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+semver = {version = "1.0", features = ["serde"]}
 bincode = "1.3"
 db = "0.1"
 dirs = "5.0"
