--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sinh-x-gitstatus"
-version = "0.2.0"
+version = "0.4.0"
 edition = "2021"
 
 [dependencies]
@@ -9,12 +9,13 @@ db = "0.1"
 dirs = "5.0"
 env_logger = "0.11"
 log = "0.4"
-rocksdb = "0.22"
 semver = {version = "1.0", features = ["serde"]}
 serde = "1.0"
 serde_derive = "1.0"
 structopt = "0.3"
 toml = "0.8"
+sled = "0.34"
+indicatif = "0.17"
 
 [features]
 dev = []
